Fix event url overflow in event overview component (#485)

--- a/src/app/components/event-overview/event-overview.component.scss
+++ b/src/app/components/event-overview/event-overview.component.scss
@@ -48,6 +48,7 @@ p.performer-not-signed-up-with-stripe-prompt {
   margin: 10px;
   align-self: center;
   line-height: 1.5;
+  overflow: hidden;
 }
 
 .subheader {
@@ -105,6 +106,7 @@ a:visited {
 
 .event-url {
   opacity: 0.6;
+  overflow-wrap: break-word;
 }
 
 .event-url-spacing {
